# lightidl

./: CMakeLists.txt  ChangeLog  HACKING  MAINTAINERS  NEWS  README.md  README.win32  glib_private.h  lexer.l  libIDL.spec  libIDL2.info  libchash.c  libchash.h  ns.c  parser.tab.c  parser.y  util.c  util.h
cmake/modules/: FindBison.cmake  FindFlex.cmake  MacroEnsureVersion.cmake
include/libIDL/: IDL.h.in  glib.h
